SNOW-3647384 don't rewind unassigned partitions (#1498)
SNOW-3647384

During a consumer rebalance a partition can be revoked while its
`openChannel` is still in-flight. When that open completes — after
`PartitionChannelManager.close()` has already removed the partition's
pending offset reset — `initializeFromSnowflake` fires `onOffsetReset`
and re-enqueues a reset for the now-unowned partition. That stale reset
is later drained on the task thread and applied via
`sinkTaskContext.offset()`, so `WorkerSinkTask.rewind()` seeks a
partition the consumer no longer owns and throws `IllegalStateException:
No current assignment for partition`. Kafka Connect treats this as fatal
and kills the task.

The fix stops unassigned partitions from ever being rewound, in three
places:

- The in-flight open skips the offset reset when its channel has been
cancelled (partition revoked), so it no longer re-enqueues a stale
reset.
- `PartitionChannelManager.drainPendingOffsetResets` now takes the
task's current assignment and drops resets for partitions no longer
assigned, instead of returning them.
- `insert()` forwards the current assignment to the drain and guards the
seek with an invariant check that it never rewinds an unassigned
partition. The check can be disabled via
`snowflake.feature.assert.partition.assignment` (default true) if it
ever misfires.

Apart from the unit tests, I confirmed with an in-progress soak test
with chaos (which now includes changing the task count) that the fix
works (see [successful
run](https://github.com/snowflakedb/snowflake-kafka-connector/actions/runs/27969081410/job/82770400739))
while the same test failed on `master` locally in an 8-minute run.